fix(typing): make query type generation work
Three separate things stood between a tracked query and its generated
result type, all of them failing from the debounce timer thread where
they surface only as a recurring "Error updating TrackUsageData".

analyzeGraphQLQuery indexed the recorded call arguments and the
recorded source offsets in lockstep and trusted both to be there.
Neither is guaranteed: the offsets are absent unless the tracking
plugin is asked for them, and babel-plugin-track-usage records an empty
argument list for a construction whose query is not a static string.
Each is now a skip with a warning naming the module and the offending
construction, so the other queries in the same push still get typed.

RE_VAR_NAME recovers the "export const <Name>" a query belongs to, and
that name becomes the generated <Name>Result type. Its character class
was [A-Za-z_]+, so Q_Foo2 was rejected outright - for a name the
framework never said was illegal. It is [A-Z][A-Za-z0-9_$]* now, ASCII
rather than full TypeScript identifier rules: the const name doubles as
the query's GraphQL operation name, a GraphQL Name is
[_A-Za-z][_0-9A-Za-z]*, so the intersection of both rule sets is
already ASCII.

The service also needs the directory those module paths are relative
to. It was handed servletContext.getRealPath("/") plus "../../src/main
/ts": the wrong layout since the frontend moved to frontend/src, and
not a project path at all - with no src/main/webapp present, Boot gives
Tomcat a temp docbase, so it resolved somewhere under /tmp. It is
qlive.dev.ts-source now, defaulting to frontend/src, because the
framework cannot know an application's layout and any derived guess
produces a plausible looking wrong path. Validated while the bean is
built, so a bad value fails once with the resolved path and the working
directory in the message.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>